src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>FON_Certifications_and_Credentials__c</fullName>
        <label>Certifications and Credentials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BSN</fullName>
                </value>
                <value>
                    <fullName>BSW</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>CPNP</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>LCSW</fullName>
                </value>
                <value>
                    <fullName>LGSW</fullName>
                </value>
                <value>
                    <fullName>LMFT</fullName>
                </value>
                <value>
                    <fullName>LMHC</fullName>
                </value>
                <value>
                    <fullName>LMSW</fullName>
                </value>
                <value>
                    <fullName>LPC</fullName>
                </value>
                <value>
                    <fullName>LPN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MEd</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>MPA</fullName>
                </value>
                <value>
                    <fullName>MPH</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>MsEd</fullName>
                </value>
                <value>
                    <fullName>MSHEP</fullName>
                </value>
                <value>
                    <fullName>MSPY</fullName>
                </value>
                <value>
                    <fullName>MSW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Current_Secondary_Position__c</fullName>
        <label>Current Secondary Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Early ChildhoodEducationCoordinator</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator(Center-based)</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator(Early Head Start/Head Start)</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator(Home-based)</fullName>
                </value>
                <value>
                    <fullName>Early Intervention Provider</fullName>
                </value>
                <value>
                    <fullName>Home Visitor</fullName>
                </value>
                <value>
                    <fullName>Judge</fullName>
                </value>
                <value>
                    <fullName>Literacy Specialist</fullName>
                </value>
                <value>
                    <fullName>Mental Health Consultant</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
                <value>
                    <fullName>Parent Educator</fullName>
                </value>
                <value>
                    <fullName>Pediatrician</fullName>
                </value>
                <value>
                    <fullName>Policymaker</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Program Administrator</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Therapist</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Degree_Program_Write_In__c</fullName>
        <label>Degree Program (Write In)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Do_Not_Domain_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Domain Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Domain_Extension__c</fullName>
        <label>Domain Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Fellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Is_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Membership_End_Date__c</fullName>
        <description>This date will be the end of the current active membership</description>
        <label>Fonteva Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FON_Membership_Start_Date__c</fullName>
        <description>This will be the membership activation date</description>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FON_My_Digital_Reading_Material__c</fullName>
        <label>My Digital Reading Material</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FON_Other_Current_Position_Level__c</fullName>
        <label>Other Current Position Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Other_Current_Secondary_Position__c</fullName>
        <label>Other Current Secondary Position</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Other_Work_Setting__c</fullName>
        <label>Other Work Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Position_Level__c</fullName>
        <label>Position Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Service Provider</fullName>
                </value>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
                <value>
                    <fullName>Manager/Supervisor</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
                <value>
                    <fullName>Program Director</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindu/Urdu</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Primary_Position__c</fullName>
        <label>Primary Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Early ChildhoodEducationCoordinator</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator(Center-based)</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator(Early Head Start/Head Start)</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator(Home-based)</fullName>
                </value>
                <value>
                    <fullName>Early Intervention Provider</fullName>
                </value>
                <value>
                    <fullName>Home Visitor</fullName>
                </value>
                <value>
                    <fullName>Judge</fullName>
                </value>
                <value>
                    <fullName>Literacy Specialist</fullName>
                </value>
                <value>
                    <fullName>Mental Health Consultant</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
                <value>
                    <fullName>Parent Educator</fullName>
                </value>
                <value>
                    <fullName>Pediatrician</fullName>
                </value>
                <value>
                    <fullName>Policymaker</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Program Administrator</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Therapist</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Colleague, Friend or Supervisor (please share their name in the write in box below if you choose)</fullName>
                </value>
                <value>
                    <fullName>Email from ZERO TO THREE</fullName>
                </value>
                <value>
                    <fullName>From another Organization (please use the write in box below to share its name if you choose)</fullName>
                </value>
                <value>
                    <fullName>Google/Internet Search</fullName>
                </value>
                <value>
                    <fullName>I am/was a ZERO TO THREE Journal Subscriber</fullName>
                </value>
                <value>
                    <fullName>I am a current or Academy Fellow</fullName>
                </value>
                <value>
                    <fullName>I attended a training led by ZERO TO THREE/Healthy Steps</fullName>
                </value>
                <value>
                    <fullName>I’ve been a long-time fan of ZERO TO THREE</fullName>
                </value>
                <value>
                    <fullName>Other (please write in below)</fullName>
                </value>
                <value>
                    <fullName>ZERO TO THREE Annual Conference</fullName>
                </value>
                <value>
                    <fullName>ZERO TO THREE’s website - www.ZEROTOTHREE.org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Referred_By__c</fullName>
        <label>Referred By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Retiree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if contact is retired. Default is unchecked</description>
        <label>Retiree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Student_Graduation_Date_mm_yyyy__c</fullName>
        <label>Student Graduation Date (mm/yyyy)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the contact is currently a student. Default is unchecked</description>
        <label>Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Update_All_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update All Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Work_Setting__c</fullName>
        <label>Work Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child Care Center</fullName>
                </value>
                <value>
                    <fullName>College/University</fullName>
                </value>
                <value>
                    <fullName>Community Mental Health Center</fullName>
                </value>
                <value>
                    <fullName>Early Intervention Program</fullName>
                </value>
                <value>
                    <fullName>For-profit Company</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Home Visiting Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Non-profit</fullName>
                </value>
                <value>
                    <fullName>Private Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FON_Write_In_Area_of_Expertise__c</fullName>
        <label>Write-In Area of Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Write_In_Primary_Position__c</fullName>
        <label>Write-In Primary Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Write_in_Certs_and_Credentials__c</fullName>
        <label>Write-in Certs and Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_HS_Work_Email_Mailto__c</fullName>
        <description>Used for HS Connect Access directory.</description>
        <formula>HYPERLINK('mailto:' +  npe01__WorkEmail__c,npe01__WorkEmail__c)</formula>
        <inlineHelpText>Used for HS Connect Access directory.</inlineHelpText>
        <label>HS Work Email Mailto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_Community_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is just for Testing. It can be deleted when done.</description>
        <inlineHelpText>This is just for Testing.</inlineHelpText>
        <label>FT Community Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fellow_Formulae__c</fullName>
        <formula>IF(AND( ITCP__c , FON_Fellow__c) ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fellow Formulae</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fellows_Community_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fellows Community Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fellowship_Class__c</fullName>
        <label>Fellowship Class</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Former_HealthySteps_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this contact used to be of a HealthySteps record type, this will be checked. Maintained by automation</inlineHelpText>
        <label>Former HealthySteps Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HL_Mod_Date__c</fullName>
        <label>HL_Mod_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HS_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>HS Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Taken_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox will be checked if Contact has ever taken an action. Includes history (has Salsa Id). Maintained by automation</inlineHelpText>
        <label>Has Taken Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_taken_Action_Formulae__c</fullName>
        <formula>IF(AND( ITCP__c , Has_Taken_Action__c ),1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has taken Action Formulae</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthySteps_Evaluation_Advisory_Group__c</fullName>
        <description>field used on a Contact to filter/pull reports for those who are in the group</description>
        <label>HealthySteps Evaluation Advisory Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthySteps_Role__c</fullName>
        <description>The contact's HealthySteps program role.</description>
        <inlineHelpText>The contact's HealthySteps program role.</inlineHelpText>
        <label>HealthySteps Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HealthySteps Specialist</fullName>
                </value>
                <value>
                    <fullName>HealthySteps Physician Champion</fullName>
                </value>
                <value>
                    <fullName>HealthySteps Program Manager/Administrator</fullName>
                </value>
                <value>
                    <fullName>Administrative staff (not specific to HealthySteps)</fullName>
                </value>
                <value>
                    <fullName>Physician (non-resident)</fullName>
                </value>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Nurse or Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner or Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Behavioral health specialist (e.g., psychologist, social worker, community health worker, care coordinator)</fullName>
                </value>
                <value>
                    <fullName>Data or research staff</fullName>
                </value>
                <value>
                    <fullName>Business development or fundraising staff</fullName>
                </value>
                <value>
                    <fullName>Billing, coding, or reimbursement staff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>HealthySteps Program Manager</fullName>
                    <isActive>false</isActive>
                    <label>HealthySteps Program Manager</label>
                </value>
                <value>
                    <fullName>HealthySteps Specialist Supervisor</fullName>
                    <isActive>false</isActive>
                    <label>HealthySteps Specialist Supervisor</label>
                </value>
                <value>
                    <fullName>IT staff</fullName>
                    <isActive>false</isActive>
                    <label>IT staff</label>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                    <isActive>false</isActive>
                    <label>Practice Manager</label>
                </value>
                <value>
                    <fullName>Reception Staff</fullName>
                    <isActive>false</isActive>
                    <label>Reception Staff</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighestEducationCompleted__c</fullName>
        <description>Highest Level of Education Completed for the Account Holder</description>
        <label>Highest Education Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High School Diploma/GED</fullName>
                </value>
                <value>
                    <fullName>Associate's Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor's Degree</fullName>
                </value>
                <value>
                    <fullName>Master's Degree</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseholdIncome__c</fullName>
        <description>The family income for this constituent.</description>
        <inlineHelpText>The family income for this constituent.</inlineHelpText>
        <label>Household Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$150,000 and over</fullName>
                </value>
                <value>
                    <fullName>$125,000 - $149,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $124,999</fullName>
                </value>
                <value>
                    <fullName>$75,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $74,999</fullName>
                </value>
                <value>
                    <fullName>$40,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$30,000 - $39,999</fullName>
                </value>
                <value>
                    <fullName>$20,000 - $29,999</fullName>
                </value>
                <value>
                    <fullName>$15,000 - $19,999</fullName>
                </value>
                <value>
                    <fullName>Under $15,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IECMH_certified_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IECMH certified trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IECMH_provisional_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IECMH provisional trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITCP_Community_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITCP Community Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITCP_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITCP Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify the contacts that have access to the ITCP sub site on HigherLogic</description>
        <label>ITCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterestDC0to5__c</fullName>
        <label>Interest: DC 0 to 5</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_DC_0_to_5</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestFormats__c</fullName>
        <label>Interest: Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Formats</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestOtherContent__c</fullName>
        <label>Interest: Other Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_Spanish_Training_Courses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Spanish Training/Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HealthySteps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if account is part of Healthy Steps.</inlineHelpText>
        <label>HS Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NPSP_Primary_Contact__c</fullName>
        <formula>Id==Account.npe01__One2OneContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is NPSP Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Policy_Network__c</fullName>
        <formula>NOT(ISBLANK( SalsaId__c )) ||
( cfg_Total_Advocacy_Actions__c &gt; 0) ||
TEXT( Think_Babies__c) = "Yes"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>WIll be checked if any of the following are true:  Has a Salsa ID, Has 1 or more Advocacy Actions, is a Think Babies Contact</inlineHelpText>
        <label>Is Policy Network Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Items_Purchased_All_Time__c</fullName>
        <inlineHelpText>Updated by flow Sales Order - After Save/Update so to identify users who purchased an item from the bookstore</inlineHelpText>
        <label>Items Purchased All-Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Items_Purchased_This_Year__c</fullName>
        <label>Items Purchased This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LMS Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Checkbox__c</fullName>
        <formula>IF( ISBLANK(  npo02__LastCloseDate__c ) , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Gift Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Registered_for_AC__c</fullName>
        <inlineHelpText>Date stamped by automation when a Contact last registered for an Annual Conference</inlineHelpText>
        <label>Last Registered for AC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Let_us_know_who_referred_you_to_us_here__c</fullName>
        <description>This field is related to Referred by on community hub to write in other option.</description>
        <label>Let us know who referred you to us here</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually updated field to identify LinkedIn group members</description>
        <label>LinkedIn Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LuminateId__c</fullName>
        <description>Identifies if the field is useful (mostly Luminate data only).</description>
        <label>Luminate Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Opt-In</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>